--- a/src/app/_components/utilities/header/header.html
+++ b/src/app/_components/utilities/header/header.html
@@ -31,7 +31,7 @@
   <div class="flex align-items-center header--nav">
 
     <div class="mobile-nav flex xl:hidden gap-3">
-        <div class="search">
+        <div class="search" (click)="goToList()">
           <span>
             <i class="pi pi-search"></i>
           </span>
