--- a/public/layout/scss/_main.scss
+++ b/public/layout/scss/_main.scss
@@ -144,6 +144,9 @@ h2 {
       @include mixins.media-query('max', 'xxl') {
         grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 24px;
+        .product:nth-child(11n-1) {
+          display: none;
+        }
       }
 
       @include mixins.media-query('max', 'lg') {
