--- a/src/app/_components/utilities/list/list.scss
+++ b/src/app/_components/utilities/list/list.scss
@@ -35,6 +35,11 @@
       @include mixins.media-query('max', 'xxl') {
         grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 24px;
+
+
+        .product:nth-child(11n-1) {
+          display: none;
+        }
       }
 
       @include mixins.media-query('max', 'lg') {
