--- a/src/app/_components/utilities/player/player.scss
+++ b/src/app/_components/utilities/player/player.scss
@@ -1,6 +1,7 @@
+@use "mixins";
 .player {
   position: fixed;
-  bottom: 40px;
+  bottom: 40px; // Default, will be updated dynamically by JS
   right: 64px;
   background: var(--color-green-800);
   border: 1px solid var(--color-green-800);
@@ -14,6 +15,9 @@
   gap: 12px;
   cursor: pointer;
   z-index: 90;
+  @include mixins.media-query('max', 'xlg') {
+    right: 40px;
+  }
   &--label {
     color: var(--p-primary-900);
     font-weight: 600;
