--- a/src/app/_components/offers/offers.html
+++ b/src/app/_components/offers/offers.html
@@ -1,5 +1,5 @@
 <div class="offers">
-  <div class="offers__filters pt-5 pb-7">
+  <div class="offers__filters pt-5 xlg:pb-7 pb-0">
     <div class="container">
     <flexmile-filters></flexmile-filters>
     </div>
