--- a/src/app/_components/utilities/filters/filters.html
+++ b/src/app/_components/utilities/filters/filters.html
@@ -1,10 +1,22 @@
 <div class="filters">
   <h3 class="pb-4">Znajdź auto na wynajem od Flexmile!</h3>
   <div class="filters__form" [formGroup]="offersService.filtersForm">
+    @if(screen.isMobile()){
+     <div class="mobile_available pb-4">
+       <flexmile-input label="Pokaż tylko dostępne od ręki" inputId="available_immediately" [type]="inputType.checkbox" formControlName="available_immediately"></flexmile-input>
+     </div>
+    }
+    <div class="mobile-filters flex xlg:hidden" [class.opened]="isMobileFiltersOpen" (click)="toggleMobileFilters()">
+    <div>
+      Wyszukaj
+      <i class="pi pi-chevron-down"></i>
+    </div>
+    </div>
+    <div class="filters__content" [class.opened]="isMobileFiltersOpen">
     <div class="grid mt-0">
-      <div class="col-8">
+      <div class="xlg:col-8 col-12">
         <div class="grid">
-          <div class="col-6 pb-0">
+          <div class="xlg:col-6 col-12 pb-0">
             <div>
               <div class="mb-4">
                 <flexmile-dropdown placeholder="Wybierz markę" [options]="carBrands" formControlName="make"
@@ -17,7 +29,7 @@
 
             </div>
           </div>
-          <div class="col-6 pb-0">
+          <div class="xlg:col-6 col-12 pb-0">
             <div>
               <div class="mb-4">
                 <flexmile-dropdown placeholder="Wybierz model" [options]="carModels" formControlName="model"
@@ -32,10 +44,10 @@
           </div>
         </div>
       </div>
-      <div class="col-4 flex">
+      <div class="xlg:col-4 col-12 flex">
         <div class="flex flex-1 flex-column max-w-full">
           <span class="label">Budżet miesięczny</span>
-          <div class="filters__price p-4 flex-1">
+          <div class="filters__price xlg:p-4 p-0 flex-1 ">
             <div class="flex">
               <div class="range_input"><flexmile-input formControlName="price_from" inputId="price_from" [type]="inputType.text" [isPriceInput]="true"></flexmile-input></div>
               <div class="spacer">-</div>
@@ -51,11 +63,14 @@
       <div class="col-12">
         <div class="flex pt-5 filters__bottom align-items-center justify-content-between">
           <div>
-            <flexmile-input label="Pokaż tylko dostępne od ręki" inputId="available_immediately" [type]="inputType.checkbox" formControlName="available_immediately"></flexmile-input>
+            @if(!screen.isMobile()){
+              <flexmile-input label="Pokaż tylko dostępne od ręki" inputId="available_immediately" [type]="inputType.checkbox" formControlName="available_immediately"></flexmile-input>
+            }
           </div>
           <div><span class="cursor-pointer" (click)="resetFilters()">Wyczyść filtry</span></div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
