--- a/src/app/_components/utilities/filters/filters.scss
+++ b/src/app/_components/utilities/filters/filters.scss
@@ -1,34 +1,113 @@
 @use 'mixins';
+
 .filters {
-  h3{
+  @include mixins.media-query('max', 'xlg') {
+    .filters__form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+  }
+
+  h3 {
     font-weight: 600;
     @include mixins.fontSize(32, 40);
     color: var(--color-white);
   }
+
   &__price {
     background: var(--color-purple-secondary);
     border-radius: var(--border-radius-base);
+    @include mixins.media-query('max', 'xlg') {
+      border-radius: 0;
+      background: none;
+    }
 
     & > div {
       gap: 12px;
-      .spacer{
+
+      .spacer {
         color: var(--color-white);
-       @include mixins.fontSize(20);
+        @include mixins.fontSize(20);
         font-weight: 900;
         width: 8px;
         display: flex;
         align-items: center;
         justify-content: center;
       }
-      .range_input{
+
+      .range_input {
         flex: 1 1 0;
         min-width: 0;
       }
     }
   }
-  &__bottom{
+
+  &__bottom {
     color: var(--color-white);
     @include mixins.fontSize(14);
     font-weight: 600;
+  }
+}
+
+.mobile-filters {
+  display: flex;
+  cursor: pointer;
+
+  & > div {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    font-weight: 600;
+    @include mixins.fontSize(16, 24);
+    color: var(--color-white);
+    padding: 24px 0;
+    border-top: 1px solid var(--color-purple-700);
+    width: 100%;
+
+    i {
+      transition: transform 0.3s ease;
+    }
+  }
+
+  &.opened {
+    i {
+      transform: rotate(180deg);
+    }
+  }
+}
+
+.filters__content {
+  @include mixins.media-query('max', 'xlg') {
+    padding-bottom: 24px;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 0.3s ease-in-out,
+    transform 0.3s ease-in-out;
+    pointer-events: none;
+
+    &.opened {
+      max-height: 2000px;
+      opacity: 1;
+      transform: translateY(0);
+      pointer-events: auto;
+    }
+  }
+}
+
+@include mixins.media-query('max', 'xlg') {
+  .mobile_available {
+    ::ng-deep {
+      flexmile-input {
+        .checkbox-wrapper label {
+          color: var(--color-white);
+          @include mixins.fontSize(14, 16, true);
+          align-items: center;
+        }
+      }
+    }
   }
 }
