--- a/src/app/_components/utilities/offers-carousel/offers-carousel.html
+++ b/src/app/_components/utilities/offers-carousel/offers-carousel.html
@@ -1,7 +1,7 @@
 <div class="offers-carousel">
   <div class="offers-carousel__header flex align-items-center justify-content-between pb-5">
     <h3>Podobne oferty</h3>
-    <flexmile-button label="Pokaż pełną ofertę" iconPosition="right" icon="pi-arrow-right" (clicked)="goToList()"></flexmile-button>
+    <flexmile-button label="Pokaż pełną ofertę" iconPosition="right" icon="pi-arrow-right" (clicked)="goToList()" [btnClass]="'hidden xlg:flex'"></flexmile-button>
   </div>
   <div class="offers-carousel__body">
     <owl-carousel-o [options]="customOptions">
