--- a/src/app/_components/utilities/offer-gallery/offer-gallery.scss
+++ b/src/app/_components/utilities/offer-gallery/offer-gallery.scss
@@ -149,6 +149,7 @@
   gap: 12px;
   padding: 4px 0;
   scroll-behavior: smooth;
+  flex-wrap: wrap;
 
   // Hide scrollbar but keep functionality
   &::-webkit-scrollbar {
@@ -339,8 +340,8 @@
     }
 
     &.active {
-      border-color: #60a5fa;
-      box-shadow: 0 0 0 1px #60a5fa;
+      border-color: var(--p-primary-900);
+      box-shadow: 0 0 0 1px var(--p-primary-900);
     }
   }
 }
